# rforth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: check-all-vm-variants.sh  check-ci.sh  generate-coverage-badge.sh
src/: lib.rs  main.rs  tokenizer.rs  vm.rs
src/io/: embedded_io.rs  mod.rs  unix_io.rs
src/sys/: embedded_sys.rs  mod.rs  unix_sys.rs
src/words/: arithmetic.rs  compiler.rs  control.rs  inner.rs  io.rs  memory.rs  mod.rs  stack.rs  system.rs
tests/: run_forth.rs  stage0_self_test.fth  stage_zero.rs  tokenizer.rs  vm.rs
tests/common/: mod.rs
