[package]
name = "rforth"
version = "0.9.0"
edition = "2024"
authors = ["P. Todd Decker <ptdecker@mac.com>"]

[[bin]]
name = "rforth"
path = "src/main.rs"
test = false

[features]
default = []
# Embedded feature target is not yet implemented
embedded = []
# Use a separate I/O port address space instead of memory-mapped I/O
vm-port-io = []
# Expose host-backed KEY/EMIT through UART-style data and status registers
vm-uart = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"      # optimize for size ("z" is more aggressive than "s")
lto = true           # link-time optimization; eliminates dead code across crates
codegen-units = 1    # single codegen unit; required for full LTO and enables better inlining
strip = true         # strip symbol table and debug sections from the final binary

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "1.0.0-alpha.3", default-features = false }
